--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Build
         run: |
-           "${GITHUB_WORKSPACE}/bin/bazel" build //:all
+           "${GITHUB_WORKSPACE}/bin/bazel" build //frcworld
 
